14519
the collections whitepaper, section 3, says:
```scala
You can form an instance of any collection by writing the class
name followed by its element. Examples are:
Traversable(1, 2, 3)
Iterable("x", "y", "z")
Map("x" -> 24, "y" -> 25, "z" -> 26)
Set(Color.red, Color.green, Color.blue)
SortedSet("hello", "world")
Buffer(x, y, z)
Vector(1.0, 2.0)
LinearSequence(a, b, c)
```

all of these work on trunk (if you supply the right package names) except for this which does not:
```scala
Welcome to Scala version 2.8.0.r18709-b20090916123819 (Java HotSpot(TM) 64-Bit Server VM, Java 1.6.0_15).
Type in expressions to have them evaluated.
Type :help for more information.

scala> scala.collection.SortedSet("hello", "world")
<console>:5: error: value SortedSet is not a member of package collection
       scala.collection.SortedSet("hello", "world")
                        ^
```
